src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>SomTv_Kategorie__c</fullName>
        <description>grobes Raster für die Position die der Kontakt innerhalb des Accounts hat.</description>
        <inlineHelpText>grobes Raster für die Position die der Kontakt innerhalb des Accounts hat.</inlineHelpText>
        <label>Kategorie</label>
        <picklist>
            <controllingField>Som_PositionFunktionIntern__c</controllingField>
            <picklistValues>
                <fullName>Optimierung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Einkauf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Forschung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geschäftsführung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beratung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nicht zugeordnet</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Kommunikationssprache__c</fullName>
        <description>bevorzugte Kommunikationssprache (steuert die Anrede Brief)</description>
        <inlineHelpText>bevorzugte Kommunikationssprache (steuert die Anrede Brief)</inlineHelpText>
        <label>Kommunikationssprache</label>
        <picklist>
            <picklistValues>
                <fullName>deutsch</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>englisch</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_KontaktdatenGeloescht__c</fullName>
        <description>Datum wird per Job gesetzt, wenn Kontaktdaten gelöscht wurden</description>
        <inlineHelpText>Datum wird per Job gesetzt, wenn Kontaktdaten gelöscht wurden</inlineHelpText>
        <label>Kontaktdaten gelöscht</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SomTv_Kuenstlername__c</fullName>
        <description>Angeonmmener Künstlername (Pseudonym)</description>
        <inlineHelpText>Angeonmmener Künstlername (Pseudonym)</inlineHelpText>
        <label>Künstlername</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_LetzterKontaktpunkt__c</fullName>
        <description>Anlass / Grund der letzten Kontaktaufnahme</description>
        <inlineHelpText>Anlass / Grund der letzten Kontaktaufnahme</inlineHelpText>
        <label>Letzter Kontaktpunkt</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_MarketingPrioritaetAT__c</fullName>
        <description>Welche Prio hat der Kontakt aus Marketingsicht bezüglich Österreich</description>
        <inlineHelpText>Welche Prio hat der Kontakt aus Marketingsicht bezüglich Österreich</inlineHelpText>
        <label>Marketing Priorität AT</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_MarketingPrioritaetAdFactory__c</fullName>
        <description>Welche Prio hat der Kontakt aus Marketingsicht bezüglich der AdFactory</description>
        <inlineHelpText>Welche Prio hat der Kontakt aus Marketingsicht bezüglich der AdFactory</inlineHelpText>
        <label>Marketing Priorität AdFactory</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_MarketingPrioritaetOnline__c</fullName>
        <description>Welche Prio hat der Kontakt aus Marketingsicht bezüglich Online</description>
        <inlineHelpText>Welche Prio hat der Kontakt aus Marketingsicht bezüglich Online</inlineHelpText>
        <label>Marketing Priorität Online</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_MarketingPrioritaetTv__c</fullName>
        <description>Welche Prio hat der Kontakt aus Marketingsicht bezüglich TV</description>
        <inlineHelpText>1: Bestimmt durch Sales D TOP 50/Top 7 Kunden und Agentur Entscheider 
Bsp.: STRATEGY DAY, Best Brands, FJ-SCREENING 
2: Zweit wichtigster ASP aus Sicht von 7.1M Sales. 
3: Alle weiteren ASP´s aus Sicht von 7.1M Sales, die nicht in Prio 1 o. Prio 2</inlineHelpText>
        <label>Marketing Priorität TV</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_PotentielleVeranstaltungen__c</fullName>
        <description>Für den Kontakt potentiell relevante Veranstaltungen</description>
        <inlineHelpText>Für den Kontakt potentiell relevante Veranstaltungen</inlineHelpText>
        <label>Potentielle Veranstaltungen</label>
        <picklist>
            <picklistValues>
                <fullName>Agentur Tour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autoball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best Brands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boxen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CLFINALE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital CIRCLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMEXCO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fußball</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GnT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>JPP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kinopremieren</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Movie meets Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Musik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Business Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schlag den Raab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOneTouch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOneTVDay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stock Car</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Strategy Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer-Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>The Voice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Turmspringen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TV DAY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WinterWorkshop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wok-WM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOne Media-Veranstaltungen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOne DIGITAL CIRCLE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOne DIGITAL FUTURE@TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOne FAMILY &amp; FRIENDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SevenOne FRÜHJAHRS-SCREENING</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SomTv_SenderMarken__c</fullName>
        <label>Sender Zuständigkeit</label>
        <picklist>
            <picklistValues>
                <fullName>Interesse SAT.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interesse ProSieben</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interesse kabel eins</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interesse sixx</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interesse SAT.1 Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interesse ProSieben MAXX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interesse Special Creation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Spitzname__c</fullName>
        <description>Spitzname/Rufname des Kontaktes</description>
        <inlineHelpText>Spitzname/Rufname des Kontaktes</inlineHelpText>
        <label>Spitzname</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_TitelAkademischerGrad__c</fullName>
        <description>Abschlussbezeichnungen, die von Hochschulen aufgrund eines erfolgreich abgeschlossenen Studiums oder aufgrund einer besonderen wissenschaftlichen Leistung vergeben werden</description>
        <inlineHelpText>Abschlussbezeichnungen, die von Hochschulen aufgrund eines erfolgreich abgeschlossenen Studiums oder aufgrund einer besonderen wissenschaftlichen Leistung vergeben werden</inlineHelpText>
        <label>Titel (Akademischer Grad)</label>
        <picklist>
            <picklistValues>
                <fullName>B.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. phil.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B. rer. Nat.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BEd</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beng</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bsc.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipl. Betriebsw.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipl.-Inf.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipl.-Ing.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipl. Soz.Päd.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dipl. Wirtsch.-Inf.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. med. dent.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dr. med. univ.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LLMoec</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M.A.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA. rer. nat.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag. (FH)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag. arch.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag. art.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag. des. ind.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag. iur.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag. iur. rer. Oec.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag. med. vet.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag. pharm.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mag. phil.</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_VipZeichen__c</fullName>
        <description>Eintragen des VIP Zeichens</description>
        <inlineHelpText>Eintragen des VIP Zeichens</inlineHelpText>
        <label>VIP Zeichen</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_ZuUeberpruefenCon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hilfsfeld für Team CRM. WF &quot;Kontakt zu überprüfen&quot; setzt Haken, wenn ein Kontakt erstellt oder bearbeitet wurde.</description>
        <inlineHelpText>Hilfsfeld für Team CRM. WF &quot;Kontakt zu überprüfen&quot; setzt Haken, wenn ein Kontakt erstellt oder bearbeitet wurde.</inlineHelpText>
        <label>zu überprüfen</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SomTv_Zustaendigkeiten__c</fullName>
        <description>Kontakt ist für folgend auswählbare Bereiche im eigenen Unternehmen zuständig.</description>
        <inlineHelpText>Kontakt ist für folgend auswählbare Bereiche im eigenen Unternehmen zuständig.</inlineHelpText>
        <label>Zuständigkeiten</label>
        <picklist>
            <picklistValues>
                <fullName>TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>online</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kino</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Werbesendungen TV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TXT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HbbTV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M4R</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sponsoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beteiligung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kooperationen</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CPO</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Som_AnredeBrief__c</fullName>
        <description>Anrede des Kontaktes in einem Brief unter Berücksichtigung der Sprache, des Geschlechts und einem Titel (wenn vorhanden).</description>
        <formula>CASE ( SomTv_Kommunikationssprache__c ,
&apos;englisch&apos;,  P7S1_AnredeBriefEnglisch__c ,
P7S1_AnredeBriefDeutsch__c )



/*
IF(LastName =&quot;NN&quot;, &quot;Sehr geehrte Damen und Herren&quot;,
CASE( Salutation ,
&quot;Herr&quot;, &quot;Sehr geehrter Herr&quot;,
&quot;Frau&quot;, &quot;Sehr geehrte Frau&quot; ,
&quot;Mr.&quot;, &quot;Dear Mr.&quot;,
&quot;Mrs.&quot;, &quot;Dear Mrs.&quot;,
&quot;&quot;)
&amp; &quot; &quot; &amp; Text(SomTv_TitelAkademischerGrad__c) &amp; &quot; &quot; &amp;  TEXT( SomTv_AdelsTitel__c )&amp; &quot; &quot;  &amp; LastName
)
*/</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Anrede des Kontaktes in einem Brief unter Berücksichtigung der Sprache, des Geschlechts und einem Titel (wenn vorhanden).</inlineHelpText>
        <label>Anrede Brief</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_BirthdayCheck__c</fullName>
        <description>Hilfsfeld: konstruiert Datum aus Jahr/Monat/Tag-Feldern, als Basis für Validierung auf gültiges Geburtsdatum</description>
        <formula>IF (
  ISBLANK (Geburtstag_Monat__c) &amp;&amp; ISBLANK (Geburtstag_Tag__c),
  &apos;&apos;,
  Geburtstag_Monat__c + &apos;/&apos; +
  Geburtstag_Tag__c + &apos;/&apos; +
  IF ( ISBLANK(Geburtstag_Jahr__c), &apos;1904&apos;, Geburtstag_Jahr__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Hilfsfeld: konstruiert Datum aus Jahr/Monat/Tag-Feldern, als Basis für Validierung auf gültiges Geburtsdatum</inlineHelpText>
        <label>Som_BirthdayCheck</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_Entscheider_Digital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entscheider Digital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Som_Entscheider_TV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entscheider TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Som_Geschlecht__c</fullName>
        <description>männlich oder weiblich, wird automatisch auf Basis der Anrede gefüllt</description>
        <inlineHelpText>männlich oder weiblich, wird automatisch auf Basis der Anrede gefüllt</inlineHelpText>
        <label>Geschlecht</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_KontaktberichtTeilnehmerVon__c</fullName>
        <description>Gibt an, in welcher Funktion der Kontakt bei einem Kontaktbericht als Teilnehmer angelegt ist.</description>
        <formula>P7S1_Emp__r.Som_KontaktberichtTeilnehmerVon__c</formula>
        <inlineHelpText>Gibt an, in welcher Funktion der Kontakt bei einem Kontaktbericht als Teilnehmer angelegt ist.</inlineHelpText>
        <label>Teilnehmer von</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Som_NumberofEvents__c</fullName>
        <description>Anzahl Events zu denen der Kontakt eingeladen wurde. (seit 1.1.2012)</description>
        <inlineHelpText>Anzahl Events zu denen der Kontakt eingeladen wurde. (seit 1.1.2012)</inlineHelpText>
        <label>Anzahl Events</label>
        <summaryFilterItems>
            <field>SomTv_B2BAktionsmitgliederHistory__c.SomTv_StatusNeu__c</field>
            <operation>equals</operation>
            <value>&quot;Einladung verschickt&quot;</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SomTv_B2BAktionsmitgliederHistory__c.CreatedDate</field>
            <operation>greaterThan</operation>
            <value>1/1/2012 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>SomTv_B2BAktionsmitgliederHistory__c.SomTv_B2BAktinsmitglied__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Som_PositionFunktionIntern__c</fullName>
        <description>Ist die interne Sicht der Funktion/Position für diesen Kontakt.</description>
        <inlineHelpText>Ist die interne Sicht der Funktion/Position für diesen Kontakt.</inlineHelpText>
        <label>Position/Funktion intern</label>
        <picklist>
            <picklistValues>
                <fullName>Account Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Art Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assistenz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auszubildender / Trainee / Volontär</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Berater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creative Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disposition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geschäftsführer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gruppenleiter (oder Head of) Beratung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gruppenleiter (oder Head of) Einkauf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gruppenleiter (oder Head of) Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gruppenleiter (oder Head of) Planung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gruppenleiter (oder Head of) Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Head of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inhaber</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Journalist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jurist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leiter (oder Director) Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leiter (oder Unit Director) Beratung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leiter (oder Unit Director) Einkauf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leiter (oder Unit Director) Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leiter (oder Unit Director) Planung</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leiter (oder Unit Director) Research</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Director</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Manager</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Som_Reliability_Events__c</fullName>
        <description>Zuverlässigkeit des Kontakts bei Rückmeldungen zu einem Event (seit 1.1.2012)</description>
        <inlineHelpText>Zuverlässigkeit des Kontakts bei Rückmeldungen zu einem Event (seit 1.1.2012)</inlineHelpText>
        <label>Zuverlässigkeit Events</label>
        <summarizedField>SomTv_B2BAktionsmitgliederHistory__c.Som_ReliabilityIndex__c</summarizedField>
        <summaryFilterItems>
            <field>SomTv_B2BAktionsmitgliederHistory__c.CreatedDate</field>
            <operation>greaterThan</operation>
            <value>1/1/2012 12:00 AM</value>
        </summaryFilterItems>
        <summaryForeignKey>SomTv_B2BAktionsmitgliederHistory__c.SomTv_B2BAktinsmitglied__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Star_Interessen__c</fullName>
        <inlineHelpText>Interessen des Kontaktes, Hobbys und Vorlieben</inlineHelpText>
        <label>Interessen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Star_Verteilerkreise__c</fullName>
        <label>Verteilerkreise</label>
        <picklist>
            <picklistValues>
                <fullName>Echo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wiesn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Mas Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>X-Mas Geschenk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Summer Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Frühjahrs Screening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GNTM Finale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TVOG Finale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Geburtstags Geschenk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Starwatch Reception</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Star_VertraulicheInformationen__c</fullName>
        <description>Nur sichtbar mit Permission Set Starwatch_vertrauliche_Infos</description>
        <label>Vertrauliche Informationen</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchKey__c</fullName>
        <formula>FirstName &amp; LastName &amp; Email &amp; Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MatchKey</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchLevel__c</fullName>
        <label>Match Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRIMEC__MatchScore__c</fullName>
        <label>MatchScore</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ven_Rolle__c</fullName>
        <description>Der Kontakt wird mit einer vorgegebenen Rolle markiert.</description>
        <inlineHelpText>Bitte eine der vorgegebenen Rollen für den Kontakt auswählen. Es müssen noch weitere Werte definiert werden.</inlineHelpText>
        <label>Rolle</label>
        <picklist>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Budgetverantwortlicher</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ausgeschieden__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Ist der Kontakt noch bei dieser Firma angestellt?</description>
        <inlineHelpText>Please activate this field if the contact person has left the company</inlineHelpText>
        <label>ausgeschieden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>keine_Werbesendungen__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wenn Haken gesetzt ist, darf kein Kontakt per werblicher Postsendungen hergestellt werden.
Optout Postsendungen</description>
        <inlineHelpText>Wenn Haken gesetzt ist, darf kein Kontakt per werblicher Postsendungen hergestellt werden.
Optout Postsendungen</inlineHelpText>
        <label>keine Werbesendungen</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AlleKontakte</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Alle Kontakte</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>AnredeGeschlechtActive</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.SALUTATION</columns>
        <columns>Som_Geschlecht__c</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <columns>CONTACT.ADDRESS1_COUNTRY</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Sphere__c</field>
            <operation>equals</operation>
            <value>SomDe</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Som_StandardAktiverKontakt</value>
        </filters>
        <filters>
            <field>CONTACT.SALUTATION</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.FIRST_NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>Anrede/Geschlecht fehlt aktive</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_ProfilesSomTv_TeamCRM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AnredeGeschlechtInactive</fullName>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>CONTACT.SALUTATION</columns>
        <columns>Som_Geschlecht__c</columns>
        <columns>CONTACT.ADDRESS1_CITY</columns>
        <columns>CONTACT.ADDRESS1_COUNTRY</columns>
        <columns>CONTACT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Sphere__c</field>
            <operation>equals</operation>
            <value>SomDe</value>
        </filters>
        <filters>
            <field>CONTACT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Contact.Som_InaktiverKontakt</value>
        </filters>
        <filters>
            <field>CONTACT.SALUTATION</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>CONTACT.FIRST_NAME</field>
            <operation>notEqual</operation>
        </filters>
        <label>Anrede/Geschlecht fehlt inaktive</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_ProfilesSomTv_TeamCRM</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BtB_Aktion_Georg_2016</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.FIRST_NAME</columns>
        <columns>CONTACT.LAST_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ausgeschieden__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Funktion_inaktiv__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>BtB Aktion Weinflasche kopieren topo</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_SE_DigitalSales</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Doubletten</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ACCOUNT_ID</columns>
        <columns>P7S1_Doublette__c</columns>
        <columns>ProRexId__c</columns>
        <columns>ProRex_Funktions_Id__c</columns>
        <columns>SomTv_ZuUeberpruefenCon__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>P7S1_Doublette__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Doubletten</label>
        <language>de</language>
        <sharedTo>
            <group>P7S1_Admins</group>
        </sharedTo>
    </listViews>
</CustomObject>